# data_summariser

./: .coverage  Dockerfile  README.md  pyproject.toml
data_summariser/: script.py  summariser.py
tests/: test_data_summariser.py
