[tool.poetry]
name = "data_summariser"
version = "0.1.0"
description = ""
authors = ["Cyril <jaeycyril@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pendulum = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
