[tool.poetry]
name = "data_summariser"
version = "0.1.0"
description = ""
authors = ["Cyril <jaeycyril@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^1.4"
pandas = "^1.2.0"
pytest-cov = "^2.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
